@@ -1,3 +1,6 @@
+4 January 2007: Wouter
+	- Testbed script (run on multiple platforms the test set).
+
 3 January 2007: Wouter
 	- committed first set of files into subversion repository.
 	  svn co svn+ssh://unbound.net/svn/unbound
